added: multple fallback ai services and updated extension zip, also added a byok as the ultimate last fallback

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -217,7 +217,7 @@
             </div>
         </div>
 
-        <div id="settings-panel">
+        <div id="settings-panel" class="hidden">
             <div style="font-size: 12px; font-weight: 600; margin-bottom: 8px;">Configure AI Access</div>
             <div class="input-group">
                 <input type="password" id="api-key-input" placeholder="Paste your Gemini or OpenAI Key here">
